--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,11 +11,34 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --foreground-shadowed: #ededed9c;
+    --highlight-color: #008000;
   }
+}
+
+@font-face {
+  font-family: 'Matrix Code NFI';
+  src: url("/fonts/matrix_code_nfi.ttf") format('truetype');
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.highlight-color {
+  color: var(--highlight-color)
+}
+
+.shadowed-color {
+  color: var(--foreground-shadowed)
+}
+
+.bg-background-main {
+  background-color: var(--background);
+}
+
+.stroke-sm {
+  -webkit-text-stroke: .5px var(--highlight-color);
 }
